k8s/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pulse-api-svc
  labels:
    app: pulse-api
spec:
  selector:
    app: pulse-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
